# BorgLand

./: CMakeLists.txt  README.md
.cache/clangd/index/: block.cpp.75E8C229980233B9.idx  block.hpp.2A424BEAC0A3A2F4.idx  engine.hpp.86C73BFF787CD207.idx  main.cpp.FD85A1ED766CDB35.idx  object.hpp.6E8D20FD69A6520C.idx  player.cpp.CBA7D621E46462D9.idx  player.hpp.8B4F2A25C7DF434A.idx  tileLoader.cpp.9762AD3BE8726754.idx  tileLoader.hpp.6AE7EF37A4D661D5.idx  world.cpp.F48179A55D302C48.idx  world.hpp.9601DD18FEFEB585.idx
devtools/: blocks.props
devtools/leveleditor/: CMakeLists.txt
devtools/leveleditor/blockfile/: blocks.props
devtools/leveleditor/include/: blockSchema.hpp  editorParams.hpp  mainWindow.hpp  saveLevel.hpp
devtools/leveleditor/include/res/: draw.xpm  erase.xpm  selection.xpm
devtools/leveleditor/include/ui/: blockSelector.hpp  propertyGrid.hpp
devtools/leveleditor/src/: blockSchema.cpp  blockSelector.cpp  main.cpp  mainDisplay.cpp  propertyGrid.cpp
devtools/leveleditor/src/elements/: editorElement.cpp
devtools/schemaGenerator/: blockProps.hpp  blocks.props  main.py  schema.txt
include/: block.hpp  controller.hpp  engine.hpp  object.hpp  player.hpp  world.hpp
include/utils/: tileLoader.hpp
leveleditor/: CMakeLists.txt
leveleditor/include/: blockElement.hpp  editorElement.hpp  editorParams.hpp  mainWindow.hpp  saveLevel.hpp
leveleditor/include/res/: draw.xpm  erase.xpm  rectangle.xpm  selection.xpm
leveleditor/include/ui/: mainDisplay.hpp  toolDisplay.hpp
leveleditor/src/: blockSelector.cpp  main.cpp  mainDisplay.cpp  saveLevel.cpp  toolDisplay.cpp
leveleditor/src/elements/: blockElement.cpp  editorElement.cpp
src/: controller.cpp  main.cpp  tileLoader.cpp
src/classes/: block.cpp  player.cpp  world.cpp
